[package]
name = "kvs"
version = "0.1.0"
authors = ["Andrés <felipe07@gmail.com>"]
edition = "2018"
description = "In-memory key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = "2.33.3"
